tests/typecheck/should_run/tcrun042.stderr

tcrun042.hs:20:5: error: [GHC-91028]
    • Couldn't match type ‘t0’ with ‘forall b. b -> b -> b’
      Expected: a
                -> (forall b. b -> b -> b) -> (a, String, forall c. c -> c -> c)
        Actual: a -> t0 -> (a, [Char], t0)
      Cannot instantiate unification variable ‘t0’
      with a type involving polytypes: forall b. b -> b -> b
    • In the expression: (, "Hello" ++ "World",)
      In an equation for ‘e’: e = (, "Hello" ++ "World",)
